# SCADA_Qt_C-_QML

./: AngularMeter.qml  CMakeLists.txt  CustomDial.qml  Gauge.qml  Main.qml  NumericalDisplay.qml  Resources.qrc  Speed.qml  SpeedNeedle.qml  main.cpp  slmp.cpp  slmp.h  slmpthread.cpp  slmpthread.h
SCADAQtWidgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
libslmp2/include/melcli/: config.h
libslmp2/include/slmp/: config.h
libslmp2/lib/: libmelcli.lib  libslmp.lib
